# whispr_clone

./: .gitignore  LICENSE  NOTICE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  cleanup.rs  config.rs  dictation.rs  lib.rs  main.rs  models.rs  paste.rs  transcription.rs
src/lib/: api.ts
